# zak_projects

./: .gitignore  README.md
heatDiff_int_2D/: CMakeLists.txt  Doxyfile  GetFromFile.h  grid.cpp  grid.h  main.cpp  param.cpp  param.h  param_struct.h  plot.cpp  plot.h  random.cpp  random.h
heatDiff_int_2D/coefficients/: coefficients.cpp  coefficients.h
heatDiff_int_2D/extra/: computeProperties.cpp  computeProperties.h  computeTInitial.cpp  computeTInitial.h  extraData.cpp  extraData.h  extraData_param.cpp  extraData_param.h  extraData_read.cpp  extraData_read.h  extraData_struct.h  jacobi.cpp  jacobi.h  properties.h  readProperties.cpp  readProperties.h
heatDiff_int_2D/grid/: grid.cpp  grid.h  gridCell.cpp  gridCell.h  gridCells.cpp  gridCells.h  gridStruct.h  gridSurf.cpp  gridSurf.h  gridSurface.cpp  gridSurface.h  grid_cell.cpp  grid_cell.h  grid_struct.h  grid_surf.cpp  grid_surf.h
heatDiff_int_2D/gridMaker/: CMakeLists.txt  main.cpp
heatDiff_int_2D/html/: annotated.html  classes.html  coefficients_8h.html  coefficients_8h_source.html  compute_t_initial_8h.html  compute_t_initial_8h_source.html  dir_1db9cad572b3a75942d0027a72fea609.html  dir_61725470c0c4ad532abb3cb1e156c123.html  dir_b80064f00a62ff32bf084f086f7e9d04.html  files.html  globals.html  globals_func.html  grid_8h.html  grid_8h_source.html  grid_cells_8h_source.html  grid_surface_8h_source.html  jacobi_8h.html  jacobi_8h_source.html  struct_coefficients-members.html  struct_coefficients.html  struct_grid-members.html  struct_grid.html
heatDiff_int_2D/inOut/: data.txt  grid_dim.txt  grid_nodes.txt  out.plt  out.txt  table.txt  tableCapac.txt  tableDens.txt  tableLamb.txt
heatDiff_int_2D/latex/: annotated.tex  coefficients_8h.tex  compute_t_initial_8h.tex  files.tex  grid_8h.tex  jacobi_8h.tex  refman.idx  refman.tex  refman.toc  struct_grid.tex  (+1 more)
(+65 files in other folders)
